<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ocean"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.johny.nocatfishing.MainActivity">


    <android.support.constraint.Guideline
        android:id="@+id/logo_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="185dp"
     />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        app:layout_constraintTop_toBottomOf="@id/logo_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        />

    <TextView
        android:id="@+id/error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_login_txt"
        app:layout_constraintBottom_toTopOf="@id/username_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/error_red"
        android:visibility="invisible"
        />


    <EditText
        android:id="@+id/password_input"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:layout_constraintTop_toBottomOf="@id/username_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/login"
        android:background="@drawable/rounded_btn"
        />
    <!--android:onClick="onClickLogin"-->

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/register"
        android:background="@drawable/rounded_btn"
        android:layout_marginTop="4dp"
        />
        <!--android:onClick="onClickRegistration"-->


    <TextView
        android:id="@+id/forgot_passwrd_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/register_button"
        android:text="@string/forgot_passwrd"
        android:textSize="@dimen/text_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="89dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/cf"
        app:layout_constraintBottom_toTopOf="@id/logo_guideline"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>
